# gcai

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py
app/cli/: index_codebase.py
app/core/: exceptions.py  logging.py  paths.py  settings.py
app/middleware/: request_context.py
app/parsers/: __init__.py  exceptions.py  files.py  git_diff.py  languages.py  tree_sitter.py
app/schemas/: __init__.py  changed_code.py  context_package.py  diff.py  error.py  graph.py  health.py  incremental_update.py  indexing.py  relations.py  scan.py  symbols.py
app/services/: __init__.py  changed_code.py  chroma_ingest.py  codebase_scan.py  context_package.py  diff.py  graph_explore.py  graph_ingest.py  incremental_update.py  indexing.py  (+2 more)
docs/: GCAI-Design-and-Implementation-Guide.md  Language-Support-Checklist.md  Roadmap.md  guide.md
tests/: test_api_app.py  test_changed_code_context.py  test_chroma_storage.py  test_codebase_scan.py  test_context_package.py  test_context_package_api.py  test_git_diff_parser.py  test_graph_explore.py  test_graph_explore_integration.py  test_incremental_update_api.py  test_incremental_update_integration.py  test_incremental_update_service.py  test_incremental_update_step1.py  test_index_verification.py  test_indexing.py  test_neo4j_storage.py  test_relation_extraction.py  test_symbol_extraction_c.py  test_symbol_extraction_cpp.py  test_symbol_extraction_java.py  test_symbol_extraction_python.py  test_tree_sitter_parsers.py
(+29 files in other folders)
