[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "gcai"
version = "0.1.0"
description = "Graph based Code AI service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.0.0",
  "fastapi>=0.115.0",
  "neo4j>=5.28.0",
  "pydantic-settings>=2.8.0",
  "tree-sitter>=0.24.0",
  "tree-sitter-language-pack>=0.7.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
